# habits

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apphabits/: apps.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
config/: settings.py  urls.py
users/: forms.py  serializers.py  urls.py  views.py
users/management/commands/: ccsu2.py
