[tool.poetry]
name = "habits"
version = "0.1.0"
description = ""
authors = ["evg007 <evg007554@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
Django = "^4.2.7"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
